<?xml version="1.0"?>
<package format="3">
    <name>ros2_bag_utils</name>
    <version>0.1.0</version>
    <description>Utilities for manipulating ROS 2 bag files, including frame_id rewriting.</description>
    <maintainer email="windzu@example.com">Windzu</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_python</buildtool_depend>

    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>pyyaml</exec_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>rosbag2_py</exec_depend>
    <exec_depend>rosidl_runtime_py</exec_depend>

    <test_depend>ament_pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
